# EHS-AI

./: Dockerfile  nginx.conf  package-lock.json
Backend/: create_structure.py  dev.db  main.py  pyproject.toml
Backend/app/api/v1/: router.py
Backend/app/api/v1/endpoints/: dashboard.py  materials.py
Backend/app/core/: appinsights.py  config.py  database.py  error_handlers.py  exceptions.py  keyvault.py  logging.py  middleware.py  responses.py
Backend/app/db/: executor.py
Backend/app/db/queries/: material_details_queries.py  material_queries.py
Backend/app/dependencies/: deps.py
Backend/app/models/: __init__.py  classification_write_back.py  dev.db  dg_master.py  material_dg_classification.py  material_ghs_classification.py  material_sds_master.py  pineline_run_audit.py  role.py  sdg_juridictions.py  sds.py  sds_composition.py  sds_hazards.py  sds_hazards_codes.py  sds_properties.py  sds_toxicology.py  sds_transpotation.py  seed_dummy_sds.py  ui_error_log.py  user.py
Backend/app/repositories/: material_details_repo.py  materials_repo.py
Backend/app/schemas/: raw_material.py
Backend/app/services/: materials_service.py
Backend/app/utils/: formatters.py  pagination.py
Frontend/: Dockerfile  index.html  nginx.conf  package.json  server.js  sync-sds-records.js  update_sections.js
Frontend/src/: App.tsx  index.css  main.tsx
public/data/: MSDS1_GHS_DG_Classification.docx.md  MSDS2_GHS_DG_Classification.docx.md  MSDS4_GHS_DG_Classification.docx.md  WRK-120B_GHS_DG_Classification.docx.md
src/: App.tsx
src/data/: extenderRecords.json  sdsRecords.json  (+1 more)
(+30 files in other folders)
